--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -45,15 +45,16 @@ main {
 .playerBoardCell,
 .enemyBoardCell {
   border: 1px solid black;
+  // background-color: rgb(99, 231, 218);
   width: 2em;
   height: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .enemyBoardCell {
   &:hover {
     background-color: red;
   }
-}
-
-.hit {
-  background: black;
 }
