--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,6 +20,18 @@ main {
   width: 100vw;
 }
 
+.modal {
+  z-index: 10;
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .boardHolder {
   display: flex;
   justify-content: space-around;
@@ -57,4 +69,46 @@ main {
   &:hover {
     background-color: red;
   }
+}
+
+// Setup Page
+
+.setupHolder {
+  margin-top: 5em;
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+}
+
+.shipHolder {
+  display: flex;
+  width: 20%;
+  flex-direction: column;
+  .shipDiv {
+    margin-top: 1em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+.vertical {
+  flex-direction: column;
+}
+
+.horizontal {
+  flex-direction: row;
+}
+
+.playerShipCell {
+  width: 2em;
+  height: 2em;
+  border: 1px solid black;
+}
+
+.ship {
+  display: flex;
+  flex-direction: none;
+  margin: 0.5em;
 }
