--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,9 @@
 @import './vars';
 @import './base';
 
-@import './components/ships';
+@import './components/shipColor';
+@import './components/setup';
+@import './components/game';
 
 html,
 body,
@@ -18,6 +20,7 @@ main {
   align-items: center;
   height: 100vh;
   width: 100vw;
+  background-color: grey;
 }
 
 .modal {
@@ -32,91 +35,26 @@ main {
   height: 100%;
 }
 
-.boardHolder {
-  display: flex;
-  justify-content: space-around;
-  width: 60%;
+.title {
+  font-size: 82px;
+  font-family: 'Bungee Hairline', sans-serif;
 }
 
-.playerBoardDiv,
-.enemyBoardDiv {
-  display: flex;
-  flex-direction: column;
-}
-
-.playerBoard,
-.enemyBoard {
-  display: flex;
-  flex-direction: column;
-}
-
-.boardRow {
-  display: flex;
-}
-
-.playerBoardCell,
-.enemyBoardCell {
+.btn {
+  font-size: 18px;
   border: 1px solid black;
-  // background-color: rgb(99, 231, 218);
-  width: 2em;
-  height: 2em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.enemyBoardCell {
+  padding: 0.5em;
+  border-radius: 0.2em;
+  margin: 0.1em;
   &:hover {
-    background-color: red;
+    background-color: rgb(65, 62, 62);
+    color: white;
+    border: 1px solid white;
   }
 }
 
-.hitShip {
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-// Setup Page
-
-.setupHolder {
-  margin-top: 5em;
-  display: flex;
-  justify-content: space-around;
+hr {
+  color: white;
   width: 60%;
-}
-
-.shipHolder {
-  display: flex;
-  width: 20%;
-  flex-direction: column;
-  .shipDiv {
-    margin-top: 1em;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-}
-
-.vertical {
-  flex-direction: column;
-}
-
-.horizontal {
-  flex-direction: row;
-}
-
-.playerShipCell {
-  width: 2em;
-  height: 2em;
-  border: 1px solid black;
-  z-index: 4;
-}
-
-.ship {
-  display: flex;
-  flex-direction: none;
-  margin: 0.5em;
-  z-index: 1;
+  margin-bottom: 1em;
 }
