--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@ body,
 #root {
   width: 100%;
   height: 100%;
+  background-color: grey;
 }
 
 main {
@@ -18,7 +19,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   background-color: grey;
 }
@@ -43,10 +44,8 @@ main {
     padding: 1em;
     h2 {
       color: white;
-      margin-bottom: 1em;
+      margin-bottom: 0.7em;
     }
-    // height: 4em;
-    // width: 7em;
   }
 }
 
@@ -60,11 +59,13 @@ main {
 }
 
 .btn {
+  display: flex;
   font-size: 18px;
   border: 1px solid black;
   padding: 0.5em;
   border-radius: 0.2em;
   margin: 0.3em;
+  max-width: 180px;
   &:hover {
     background-color: rgb(65, 62, 62);
     color: white;
