--- a/src/styles/components/game.scss
+++ b/src/styles/components/game.scss
@@ -15,6 +15,7 @@
 .enemyBoard {
   display: flex;
   flex-direction: column;
+  margin: 1em;
 }
 
 .boardRow {
@@ -25,8 +26,8 @@
 .enemyBoardCell {
   border: 1px solid black;
   // background-color: rgb(99, 231, 218);
-  width: 2em;
-  height: 2em;
+  min-width: 2em;
+  min-height: 2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -41,5 +42,13 @@
 .hitShip {
   &:hover {
     cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .boardHolder {
+    flex-direction: column;
+    width: 80%;
+    align-items: center;
   }
 }
