--- a/src/styles/components/setup.scss
+++ b/src/styles/components/setup.scss
@@ -10,13 +10,13 @@
   display: flex;
   width: 20%;
   flex-direction: column;
-  .shipDiv {
-    margin-top: 1em;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
+}
+.shipDiv {
+  margin-top: 1em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .vertical {
@@ -31,12 +31,24 @@
   width: 2em;
   height: 2em;
   border: 1px solid black;
-  z-index: 4;
 }
 
 .ship {
   display: flex;
   flex-direction: none;
   margin: 0.5em;
-  z-index: 1;
+}
+
+@media screen and (max-width: 1068px) {
+  .setupHolder {
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  .shipHolder {
+    width: 80%;
+  }
+  .shipDiv {
+    margin: 0;
+  }
 }
