--- a/src/styles/components/game.scss
+++ b/src/styles/components/game.scss
@@ -2,7 +2,7 @@
 .boardHolder {
   display: flex;
   justify-content: space-around;
-  width: 60%;
+  width: max(60%, 760px);
 }
 
 .playerBoardDiv,
@@ -22,16 +22,26 @@
   display: flex;
 }
 
+.headerDiv {
+  display: flex;
+  p {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
 .playerBoardCell,
 .enemyBoardCell {
   border: 1px solid black;
-  // background-color: rgb(99, 231, 218);
-  min-width: 2em;
-  min-height: 2em;
+  width: 2.5em;
+  height: 2.5em;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-weight: bolder;
 }
 .enemyBoardCell {
   &:hover {
