--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,4 @@
 // Base reset
-@import './vars';
 @import './base';
 
 @import './components/shipColor';
@@ -12,6 +11,7 @@ body,
   width: 100%;
   height: 100%;
   background-color: grey;
+  transition: box-shadow 500ms;
 }
 
 main {
@@ -22,12 +22,12 @@ main {
   height: 100%;
   width: 100vw;
   background-color: grey;
+  transition: box-shadow 500ms;
 }
 
 .modal {
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.131);
-  // background: transparent;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,6 +52,7 @@ main {
 .title {
   font-size: 82px;
   font-family: 'Bungee Hairline', sans-serif;
+  margin-top: 1em;
 }
 
 .header {
@@ -76,5 +77,19 @@ main {
 hr {
   color: white;
   width: 60%;
+  height: 0px;
   margin-bottom: 1em;
+}
+
+.error {
+  -webkit-box-shadow: inset 4px 4px 15px 0px red,
+    0px 0px 15px 5px rgba(255, 10, 38, 0);
+  box-shadow: inset 4px 4px 15px 0px red, 0px 0px 15px 5px rgba(255, 10, 38, 0);
+}
+
+.success {
+  -webkit-box-shadow: inset 4px 4px 15px 0px green,
+    0px 0px 15px 5px rgba(44, 186, 26, 0);
+  box-shadow: inset 4px 4px 15px 0px green,
+    0px 0px 15px 5px rgba(44, 186, 26, 0);
 }
